# hn-rerank

./: .coverage  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Caddyfile  METRICS.md  PLAN.md  README.md  SESSION_SUMMARY.md  TECHNICAL_DEBT.md  baseline_head.txt  ce_head.txt  cli.py  clusters.html  config.toml  coverage.json  database.py  debug_algolia.py  debug_data.py  debug_indent.py  debug_threshold.py  demo.md  demo_rodney.md  eval.py  eval_report.json  evaluate_quality.py  export_onnx.py  export_tuned.py  finetune_colab.ipynb  finetune_runpod.py  fix_tuning.py  generate.py  generate_html.py  hn_rerank.service  hn_rerank.timer  hn_rerank.toml  hn_rerank_feedback.service  index.html  (+27 more)
.Jules/: palette.md
.jules/: bolt.md
api/: cache_utils.py  client.py  config.py  constants.py  content.py  cross_encoder.py  env_setup.py  external_sources.py  feedback.py  feedback_single_model.py  fetching.py  impressions.py  learned_ranker.py  llm_utils.py  logging_config.py  main.py  model_metadata.py  models.py  ordinal_model.py  popular-blogs-2025.opml  regen_scheduler.py  requirements.txt  rerank.py  rss.py  telemetry_features.py  type_utils.py  url_utils.py
archive/: MODEL_PROVENANCE.md
docs/: caching.md  cross-encoder.md  debugging-playbook.md  evaluation.md  features.md  learned-ranker.md  ranking-pipeline.md  selection-policy.md
plans/: implicit_ctr_signal.md  impression_features.md  local_llm_with_whichllm.md  read-path-optimization.md  surface-types.md  title_embedding_duplicate_detection.md
results/: 16f+raw-mlp-alpha.json  16f+raw-mlp-relu.json  16f+raw-mlp-sigmoid.json  16f+raw-svm-rbf.json  16f-mlp-alpha.json  16f-mlp-relu.json  16f-mlp-sigmoid.json  16f-svm-rbf.json  22f+raw-mlp-alpha.json  22f+raw-mlp-relu.json  22f+raw-mlp-sigmoid.json  22f+raw-svm-rbf.json  22f-mlp-alpha.json  22f-mlp-relu.json  22f-mlp-sigmoid.json  22f-svm-rbf.json  4x4_matrix.json  baseline_ablation.json  hn_mining_0.json  hn_mining_10.json  hn_mining_20.json  hn_mining_50.json  kernel_linear.json  kernel_poly.json  kernel_rbf.json  kernel_sigmoid.json  mlp16f_a0.0001.json  mlp16f_a0.001.json  mlp16f_a0.005.json  mlp16f_a0.01.json  mlp16f_a0.05.json  mlp16f_a0.1.json  mlp16f_h128.json  mlp16f_h128_64.json  mlp16f_h128_64_32.json  mlp16f_h32.json  mlp16f_h32_16.json  mlp16f_h64.json  mlp16f_h64_32.json  mlp16f_lr0.0001.json  (+42 more)
runs/: run_category_pipeline.sh  run_final_aggregate.sh  run_from_stage4.sh  run_multistage_optuna.sh  run_multistage_optuna_serial.sh
scripts/: ablate_classifier_features.py  backfill_feedback_story_metadata.py  backup_hn_db.sh  benchmark_embedding_models.py  benchmark_hn_fetch_sources.py  benchmark_ollama_tldr.py  build_final_enqueue.py  check_ui_invariants.sh  compare_dashboard_feedback_configs.py  compare_feedback_scores.py  compare_models.py  compare_quality_configs.py  debug_ranking.py  evaluate_feedback_models.py  evaluate_learned_ranker.py  groq_probe.py  (+18 more)
(+133 files in other folders)
