[project]
name = "hn-rerank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "einops>=0.8.1",
    "httpx>=0.28.1",
    "hypothesis>=6.150.0",
    "numpy>=2.4.0",
    "onnxruntime>=1.23.2",
    "optimum[onnxruntime]>=2.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "trafilatura>=2.0.0",
    "transformers>=4.57.3",
]
