[project]
name = "hn-rerank"
version = "0.1.0"
description = "Personalized Hacker News reranking using local semantic embeddings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.2.1",
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.4.2",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "numpy<2.4.0",
    "onnxruntime>=1.23.2",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "trafilatura>=2.0.0",
    "transformers>=4.57.3",
    "tenacity>=9.0.0",
    "url-normalize>=2.2.1",
    "python-dotenv>=1.2.1",
    "langdetect>=1.0.9",
]

[dependency-groups]
dev = [
    "hypothesis>=6.150.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.10",
    "ty>=0.0.9",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-tqdm>=4.67.0.20250809",
]

[project.optional-dependencies]
reddit-signals = [
    "praw>=7.8.1",
]
archive-vector = [
    "sentence-transformers>=5.2.0",
]
model-export = [
    "optimum[onnxruntime]>=2.1.0",
]
train = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "optimum[onnxruntime]>=2.1.0",
    "runpod>=1.8.1",
    "sentence-transformers>=5.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ty.src]
exclude = [
    "finetune_colab.ipynb",
    "finetune_runpod.py",
    "tune_embeddings.py",
]
